--- a/src/docs/asciidoc/road-to-immutability/050-e2immutable.adoc
+++ b/src/docs/asciidoc/road-to-immutability/050-e2immutable.adoc
@@ -1,6 +1,6 @@
 == Level 2 immutability
 
-=== Definition
+=== Definition and examples
 
 First, what do we want intuitively?
 A useful form of immutability, less strong than deeply immutable, but better than level 1 immutability for many situations.
@@ -13,7 +13,7 @@ The type is not responsible for what others do to the content of the objects it 
 
 Technically, level 2 immutability is much harder to define than level 1 immutability.
 We identify three rules, on top of the obvious level 1 immutability requirement.
-One of these must be observed at all times:
+The first one prevents the type from making changes to its own fields:
 
 ****
 *Definition*: the *first rule of level 2 immutability* is that all fields must be {nm}.
@@ -21,6 +21,7 @@ One of these must be observed at all times:
 
 Our friend the `Pair` satisfies this first rule:
 
+.Example {counter:example}, the class `Pair`, revisited [[type-pair]]
 [source,java]
 ----
 public class Pair<K,V> {
@@ -34,7 +35,7 @@ public class Pair<K,V> {
 }
 ----
 
-Note that since `K` and `V` are unbound generic types, it is not possible to modify their content from inside `Pair`, since there are no modifying methods one can call on unbound types.
+Note that since `K` and `V` are unbound generic types, it is not even possible to modify their content from inside `Pair`, since there are no modifying methods one can call on unbound types.
 
 How does it fit the intuitive rule for immutability?
 The type `Pair` holds two objects.
@@ -44,7 +45,7 @@ Summarizing: `Pair` fits the intuitive definition nicely.
 
 Here is an example which shows the necessity of the first rule more explicitly:
 
-.Point and Line
+.Example {counter:example}: the types `Point` and `Line`
 [#point-and-line]
 [source,java]
 ----
@@ -105,23 +106,20 @@ class Line {
     }
 }
 ----
+
 <1> Modifying operation on `point1`.
 
 The fields `point1` and `point2` are effectively final.
 Without the translation method, the fields would be {nm} as well.
-The translation method modifies their content, rendering the type not level 2 immutable.
+The translation method modifies the fields' content, preventing the type from becoming level 2 immutable.
 
-Assuming a type's goal is to store a number of objects, it is easy to see that a level 1 immutable type cannot hold additional, modifiable state.
-It follows that every method call on the container object with the same arguments will render the same result.
-(Note that this cannot be bypassed by using _static_ state, i.e., state specific to the type rather than the object.
-Our definitions make no distinction between static and instance fields.)
+From the restriction of rule 1, that all its fields should remain unmodified, it follows that, excluding external changes, every method call on a level 2 immutable container object with the same arguments will render the same result.
+We note that this statement cannot be bypassed by using _static_ state, i.e., state specific to the type rather than the object.
+The definitions make no distinction between static and instance fields.
 
-In order to hold an arbitrary (or even modestly large) amount of objects, a type has to have _support data_: think an array, a tree structure, buckets for a hash table, etc.
-The rest of the definition of level 2 immutability is essentially about expressing the immutability of this support data.
-After construction, a level 2 immutable type will still hold a fixed number of objects, and the type will not change their content, nor exchange them for other objects, nor allow others to exchange them.
-
-We will introduce two additional rules to express the immutability of this support data.
-Together with the first rule, and building on level 1 immutability, we obtain:
+To obtain a useful definition of immutability, one which is not too strict yet follows our intuitive requirements, we should allow modifiable fields, if they are properly shielded from the modifications they intrinsically allow.
+We will introduce two additional rules to constrain the modifications of this modifiable data.
+Together with the first rule, and building on level 1 immutability, we define:
 
 ****
 *Definition: level 2 immutability*:
@@ -132,7 +130,7 @@ Together with the first rule, and building on level 1 immutability, we obtain:
 
 *Rule 2*: All fields are either private, or of level 2 immutable type.
 
-*Rule 3*: All constructors and non-private methods are independent of the fields.
+*Rule 3*: All constructors and non-private methods are independent of the modifiable fields.
 ****
 
 Rule 2 is there to ensure that the modifiable fields of the object cannot be modified by means of access to the non-private fields.
@@ -140,47 +138,54 @@ Rule 3 ensures that the modifiable fields of the object cannot be modified exter
 
 Note that:
 
-* All primitive types are level 2 immutable, as is `java.lang.Object`.
-Whilst this follows trivially for primitives, level 2 immutability for `Object` requires us to either ignore the methods related to synchronization, or to assume that its implementation (for it is not an abstract type) has no fields.
-* A fields whose type is an unbound type parameter, is level 2 immutable, as this type parameter could be substituted by `java.lang.Object`, which is level 2 immutable.
-(See <<generics>>.)
-* Constructor parameters of unbound type parameter, or method return types of unbound type parameter are always independent, in the same way that level 2 immutable types are: inside the class, there is no way of modifying them.
+* We state that all primitive types are level 2 immutable, as is `java.lang.Object`.
+Whilst this is fairly obvious in the case of primitives, level 2 immutability for `Object` requires us to either ignore the methods related to synchronization, or to assume that its implementation (for it is not an abstract type) has no fields.
 * A consequence of rule 1 is that all methods in a level 2 immutable type must be {nm}.
-* The section on <<abstract-methods>> will detail how level 2 immutability is computed for abstract types (interfaces, abstract classes).
-* This definition is recursive, with `java.lang.Object` the level 2 immutable base of the recursion.
+* A field whose type is an unbound type parameter, is of level 2 immutable type, as this type parameter could be substituted by `java.lang.Object`, which we have just declared to be level 2 immutable.
+More details can be found in the section on <<generics>>.
+* Constructor parameters of unbound type parameter, or method return types of unbound type parameter do not have to follow rule 3 (or equivalently, they are always independent, in the same way that level 2 immutable types are): inside the class, there is no way of modifying them.
+This will be expanded on in <<immutable-content>>.
+* The section on <<inheritance>> will show how the immutability property relates to implementing interfaces, and sub-classing.
+This is important because the definition is recursive, with `java.lang.Object` the level 2 immutable base of the recursion.
 All other types must extend from it.
-
-The first rule can be reached _eventually_ if there is one or more methods that effect a transition from the mutable to the immutable state.
+* The section on <<abstract-methods>> will detail how level 2 immutability is computed for abstract types (interfaces, abstract classes).
+* The first rule can be reached _eventually_ if there is one or more methods that effect a transition from the mutable to the immutable state.
 This typically means that all methods that assign or modify fields become off-limits after calling this marker method.
 Eventuality for rules 2 and 3 seems too far-fetched.
 We address the topic of eventual immutability fully in the section <<eventual-immutability>>.
 
 Let us go to examples immediately.
 
-.Example with array, v1
+.Example {counter:example}, explaining level 2 immutability: with array, version 1, not good
 [source,java]
 ----
+@E1Container
 class ArrayContainer1<T> {
+    @NotModified
     private final T[] data;
 
+    @Dependent
     public ArrayContainer1(T[] ts) {
         this.data = ts;
     }
 
+    @NotModified
     public Stream<T> stream() {
         return Arrays.stream(data);
     }
 }
 ----
 
-After creation, changes to the source array `ts` are effectively changes to the data array `data`.
+After creation, external changes to the source array `ts` are effectively modifications to the field `data`.
 This construct fails rule 3, independence.
-Here the array of type `T[]` is the support data that holds `T`, which also appears in the return type of the `stream` method, held by `Stream`.
+The field is a modifiable data structure, and must be shielded from external modifications.
 
-.Example with array, v2, still not OK
+.Example {counter:example}, explaining level 2 immutability: with array, version 2, not good
 [source,java]
 ----
+@E1Container
 class ArrayContainer2<T> {
+    @NotModified
     public final T[] data;
 
     public ArrayContainer2(T[] ts) {
@@ -188,6 +193,7 @@ class ArrayContainer2<T> {
         System.arraycopy(ts, 0, data, 0, ts.length);
     }
 
+    @NotModified
     public Stream<T> stream() {
         return Arrays.stream(data);
     }
@@ -197,10 +203,12 @@ class ArrayContainer2<T> {
 Users of this type can modify the content of the array using direct field access!
 This construct fails rule 2, which applies for the same reasons as in the previous example.
 
-.Example with array, v3, safe
+.Example {counter:example}, explaining level 2 immutability: with array, version 3, safe
 [source,java]
 ----
+@E2Container
 class ArrayContainer3<T> {
+    @NotModified
     private final T[] data; // <1>
 
     public ArrayContainer3(T[] ts) {
@@ -208,59 +216,73 @@ class ArrayContainer3<T> {
         System.arraycopy(ts, 0, data, 0, ts.length);
     }
 
+    @NotModified
     public Stream<T> stream() {
         return Arrays.stream(data);
     }
 }
 ----
-<1> The array is private, and therefore protected from external modification.
+
+<1> The array is private, and therefore protected from external modification via the direct access route.
 <2> The array has been copied, and therefore is independent of the one passed in the parameter.
 
-The independence rule enforces the type to have its own structure rather than someone else's.
-Here's the same group of examples, now with JDK Collections:
+The independence rule enforces the type to have its own modifiable structure, rather than someone else's.
+Here is the same group of examples, now with JDK Collections:
 
-.Example with collection, v1
+.Example {counter:example}, explaining level 2 immutability: with collection, version 1, not good
 [source,java]
 ----
+@E1Container
 class SetBasedContainer1<T> {
+    @NotModified
     private final Set<T> data;
 
+    @Dependent
     public SetBasedContainer1(Set<T> ts) {
         this.data = ts; // <1>
     }
 
+    @NotModified
     public Stream<T> stream() {
         return data.stream();
     }
 }
 ----
+
 <1> After creation, changes to the source set are effectively changes to the data.
 
 The lack of independence of the constructor violates rule 3 in the first example.
 
-.Example with collection, v2, still not OK
+.Example {counter:example}, explaining level 2 immutability: with collection, version 2, not good
 [source,java]
 ----
+@E1Container
 class SetBasedContainer2<T> {
+    @NotModified
     public final Set<T> data; // <1>
 
+    @Independent
     public SetBasedContainer2(Set<T> ts) {
         this.data = new HashSet<>(ts);
     }
 
+    @NotModified
     public Stream<T> stream() {
         return data.stream();
     }
 }
 ----
+
 <1> Users of this type can modify the content of the set after creation!
 
 Here, the `data` field is public, which allows for external modification.
 
-.Example with set, v3, safe
+.Example {counter:example}, explaining level 2 immutability: with collection, version 3, safe
 [source,java]
 ----
+@E2Container
 class SetBasedContainer3<T> {
+    @NotModified
     private final Set<T> data; // <1>
 
     public SetBasedContainer3(Set<T> ts) {
@@ -272,16 +294,19 @@ class SetBasedContainer3<T> {
     }
 }
 ----
+
 <1> The set is private, and therefore protected from external modification.
 <2> The set has been copied, and therefore is independent of the one passed in the parameter.
 
 Finally, we have a level 2 immutable type.
 
-.Example with set, v4, safe
+.Example {counter:example}, explaining level 2 immutability: with collection, version 4, safe
 [source,java]
 ----
+@E2Container
 class SetBasedContainer4<T> {
-    public final ImmutableSet<T> data; // <1>
+    @E2Container
+    public final Set<T> data; // <1>
 
     public SetBasedContainer4(Set<T> ts) {
         this.data = Set.copyOf(ts); // <2>
@@ -292,39 +317,47 @@ class SetBasedContainer4<T> {
     }
 }
 ----
-<1> the data is public, but the `ImmutableSet` is {e2immutable} itself.
+
+<1> the data is public, but the `Set` is {e2immutable} itself, because its content is the result of `Set.copyOf`.
 <2> Independence guaranteed.
 
-The independence rule 3 is there to ensure that the type does not expose its support data through parameters and return types:
+The section on <<dynamic-type-annotations>> will explain how the {e2container} annotation travels to the field `data`.
 
-.Example with set, v5, unsafe
+The independence rule, rule 3, is there to ensure that the type does not expose its modifiable data through parameters and return types:
+
+.Example {counter:example}, explaining level 2 immutability: with collection, version 5, not good
 [source,java]
 ----
+@E1Container
 class SetBasedContainer5<T> {
+    @NotModified
     private final Set<T> data; // <1>
 
+    @Independent
     public SetBasedContainer5(Set<T> ts) {
         this.data = new HashSet<>(ts); // <2>
     }
 
+    @Dependent
     public Set<T> getSet() {
         return data; // <3>
     }
 }
 ----
+
 <1> No exposure via the field
 <2> No exposure via the parameter of the constructor
 <3> ... but exposure via the getter.
-We could as well have made the field `public final`.
+The presence of the getter is equivalent to adding the modifiers `public final` to the field.
 
-Note that by decomposing all definitions, we observe that requiring all fields to be {final} and {nm} is equivalent to requiring that all non-private fields have the `final` modifier, and that methods that are not part of the construction phase, are {nm}.
+Note that by decomposing rules 0 and 1, we observe that requiring all fields to be {final} and {nm} is equivalent to requiring that all non-private fields have the `final` modifier, and that methods that are not part of the construction phase, are {nm}.
+The final example shows a type which violates this rule 1, because a modifying method has been added:
 
-The following type is {container}, the field is {final}, but it is not {nm}:
-
+.Example {counter:example}, explaining level 2 immutability: with collection, version 6, not good
 [source,java]
 ----
-class Example2 {
-    @Final
+@E1Container
+class SetBasedContainer6<T> {
     @Modified
     public final Set<T> set = new HashSet<>();
 
@@ -342,9 +375,8 @@ class Example2 {
 Deriving from a class that is level 2 immutable, is the most normal situation: since `java.lang.Object` is a level 2 immutable container, every class will do so.
 Clearly, the property is not inherited.
 Most importantly, the analyser prohibits changing the modification status of methods: once a method is non-modifying, it cannot become modifying in a derived class.
-This means, for example, that the analyser will block a modifying `equals()` or `toString()` method, in any class!
-Note that this rule applies to implementations of methods of all super-types: no implementation of `java.util.Collection.size()`
-will be allowed to be modifying.
+This means, for example, that the analyser will block a modifying `equals()` or `toString()` method, in any class.
+Similarly, no implementation of `java.util.Collection.size()` will be allowed to be modifying.
 
 The guiding principle here is that of _consistency of expectation_: software developers are expecting that `equals` is non-modifying.
 They know that a setter will make an assignment, but they'll expect a getter to simply return a value.
@@ -353,6 +385,7 @@ No getter should ever be modifying.
 The other direction is more interesting, while equally simple to explain: deriving from a parent class cannot increase the immutability level.
 A method overriding one marked {modified} does not have to be modifying, but it is not allowed to be explicitly marked {nm}:
 
+.Example {counter:example}, illegal modification status of methods
 [source,java]
 ----
 abstract class MyString implements Collection<String> {
@@ -369,17 +402,19 @@ abstract class MyString implements Collection<String> {
     public abstract boolean add(String s);
 }
 ----
+
 <1> Not allowed!
 Any implementation of `Collection.size()` must be non-modifying.
 <2> Not allowed!
-You cannot explicitly (contractually) change `Collection.add()` from {modified} to {nm}.
+You cannot explicitly (contractually) change `Collection.add()` from {modified} to {nm} in a sub-type.
 
 Following the same principles, we observe that types deriving from a {container} super-type need not be a container themselves.
-So while we may state that `Collection` is a container, it is perfectly possible to implement a collection which has public methods which modify their parameters, _as long as the methods of `Collection` do not modify their parameters_.
+So while we may state that `Collection` is a container, it is perfectly possible to implement a collection which has public methods which modify their parameters, _as long as the methods inherited from `Collection` do not modify their parameters_.
 In other words, you can add new parameter-modifying methods, but you cannot change the modification status of `size`!
 
 Note that sealed types (since JDK 17) reject the 'you can always extend' assumptions of Java types.
 In this case, all sub-types are known, and visible.
+The single practical consequence is that if the parent type is abstract, its annotations need not be contracted: they can be computed because all implementations are available to the analyser.
 
 [#generics]
 === Generics
@@ -389,16 +424,19 @@ Because the unbound case is simply a way of saying that the type parameter exten
 
 The analyser simply treats the parameterized type `T` as if it were the type `E`.
 In the case of unbound parameter types and `java.lang.Object`, we find an {e2container} type.
+The latter has no modifying methods, which implies that rules 2 and 3 of level 2 immutability are automatically satisfied for fields of unbound parameter type.
 
-The analyser recognises types that can be replaced by an unbound parameter type, when they are used _transparently_: to methods are called on it, save the ones from `java.lang.Object`; none of its fields are accessed, and it is not used as an argument to parameters where anything more specific than `java.lang.Object` is required.
+The analyser recognises types that can be replaced by an unbound parameter type, when they are used _transparently_: no methods are called on it, save the ones from `java.lang.Object`; none of its fields are accessed, and it is not used as an argument to parameters where anything more specific than `java.lang.Object` is required.
 It will issue a warning, and internally treat the type as an unbound parameter type, and hence {e2container}, even if the type is obviously modifiable.
 
 The following trivial example should clarify:
 
-.Example of types _transparent_ in a class
+.Example {counter:example}, a type _transparent_ in a class
 [source,java]
 ----
+@E2Container
 public class OddPair {
+
     private final Set<String> set;
     private final StringBuilder sb;
 
@@ -414,12 +452,14 @@ public class OddPair {
 
 Nowhere in `OddPair` do we make actual use of the fact that `set` is of type `Set`, or `sb` is of type `StringBuilder`.
 The analyser encourages you to replace `Set` by some unbound parameter type, say `K`, and `StringBuilder` by some other, say `V`.
+The result is, of course, the type `Pair` as defined <<type-pair,earlier>>.
 
 [#abstract-methods]
 === Abstract methods
 
 Because `java.lang.Object` is a level 2 immutable container, trivial extensions are, too:
 
+.Example {counter:example}, trivial extensions of `java.lang.Object`
 [source,java]
 ----
 @E2Container
@@ -450,14 +490,15 @@ They cannot expose the fields via parameters: parameters of non-primitive, non-l
 ****
 
 The consequence of these choices is that implementations and extensions of abstract and non-abstract types will have the opportunity to have the same immutability properties.
-This allows us, e.g., to see every implementation of `java.util.Set` as a container, if we limit to the public methods of `Set`.
+This allows us, e.g., to think of every implementation of `java.util.Set` as a level 1 immutable container, if we limit to the public methods of `Set`.
 Similarly, we can treat any implementation of `Comparable`, defined as:
 
-.Comparable annotated
+.Example {counter:example}, `java.lang.Comparable` annotated
 [source,java]
 ----
 @E2Container
 interface Comparable<T> {
+
     // @NotModified implicitly present
     int compareTo(@NotModified T other);
 }
@@ -477,7 +518,7 @@ We continue this section with some examples which will form the backbone of the 
 
 If semantically used correctly, types implementing the `HasSize` interface expose a single numeric aspect of their content:
 
-.The _HasSize_ interface
+.Example {counter:example}, the `HasSize` interface
 [source,java]
 ----
 @E2Container // computed (or contracted)
@@ -495,7 +536,7 @@ interface HasSize {
 
 We extend to:
 
-.Still level 2 immutable: _NonEmptyImmutableList_
+.Example {counter:example}, still level 2 immutable: `NonEmptyImmutableList`
 [source,java]
 ----
 @E2Container // computed, contracted
@@ -508,24 +549,29 @@ interface NonEmptyImmutableList<T> extends HasSize {
     // implicitly present: @NotModified
     void visit(Consumer<T> consumer); // <2>
 
-    @Constant
+    @Constant // <3>
+    @NotModified // <3>
     @Override
     default boolean isEmpty() {
         return false;
     }
 }
 ----
-<1> Whilst in the abstract case, `T` will always be {independent} (because it represents the level 2 immutable type `java.lang.Object`), contracting the {independent} annotation here will force all implementations to have an independent `first` method.
+
+<1> Whilst formally, `T` will always be {independent} (because it represents the level 2 immutable type `java.lang.Object`), contracting the {independent} annotation here will force all concrete implementations to have an independent `first` method.
+If the concrete replacement for `T` is modifiable, the independence rule must be satisfied.
 <2> The parameter `consumer` would normally be {modified}, which would break the {container} property that we wish for `NonEmptyImmutableList`.
 However, as detailed and explained in <<immutable-content>>, the abstract types in `java.util.function` receive an implicit {ignoreModifications} annotation.
+<3> Computed, because it is not an abstract method.
 
 The `Consumer` interface is defined and annotated as:
 
-.The _Consumer_ interface
+.Example {counter:example}, the _java.util.function.Consumer` interface, annotated
 [source,java]
 ----
 @FunctionalInterface
 interface Consumer<T> {
+
     @Modified
     void accept(T t); // @Modified on t implicit
 }
@@ -536,8 +582,7 @@ They are also allowed to modify their parameter, as we will demonstrate shortly.
 
 Let's downgrade from {e2container} to {e1container} by adding a modifying method:
 
-[#NonEmptyList]
-.Not level 2 immutable anymore: _NonEmptyList_
+.Example {counter:example}, not level 2 immutable anymore: `NonEmptyList` [[NonEmptyList]]
 [source,java]
 ----
 @E1Container
@@ -548,32 +593,38 @@ interface NonEmptyList<T> extends NonEmptyImmutableList<T> {
 }
 ----
 
-The method `setFirst` goes against the default because it is modifying, and because it promises to keep its parameter unmodified.
+The method `setFirst` goes against the default annotations twice: because it is modifying, and because it promises to keep its parameter unmodified.
 Implementations can even lose level 1 immutability:
 
-.Mutable implementation of _NonEmptyList_
+.Example {counter:example}, mutable implementation of `NonEmptyList`
 [source,java]
 ----
 @Container
 static class One<T> implements NonEmptyList<T> {
+
     @Variable
     private T t;
 
+    @NotModified
     @Override
     public T first() {
         return t;
     }
 
+    @Modified
     @Override
     public void setFirst(T t) {
         this.t = t;
     }
 
+    @Constant
+    @NotModified
     @Override
     public int size() {
         return 1;
     }
 
+    @NotModified
     @Override
     public void visit(Consumer<T> consumer) {
         consumer.accept(t);
@@ -583,28 +634,33 @@ static class One<T> implements NonEmptyList<T> {
 
 Here is a (slightly more convoluted) implementation that remains {e1container}:
 
-.Level 1 immutable implementation of _NonEmptyList_
+.Example {counter:example}, level 1 immutable implementation of `NonEmptyList`
 [source,java]
 ----
 @E1Container
 static class OneWithOne<T> implements NonEmptyList<T> {
     private final One<T> one = new One<>();
 
+    @NotModified
     @Override
     public T first() {
         return one.first();
     }
 
+    @Modified
     @Override
     public void setFirst(T t) {
         one.setFirst(t);
     }
 
+    @Constant
+    @NotModified
     @Override
     public int size() {
         return 1;
     }
 
+    @NotModified
     @Override
     public void visit(Consumer<T> consumer) {
         consumer.accept(first());
@@ -614,10 +670,10 @@ static class OneWithOne<T> implements NonEmptyList<T> {
 
 Obviously, a {e2container} implementation is not possible: the immutability status of an extension (`OneWithOne`, `One`) cannot be better than that of the type it is extending from (`NonEmptyList`).
 
-We end the section by showing how concrete implementations of the `accept` method in `Consumer` make modifications.
+We end the section by showing how concrete implementations of the `accept` method in `Consumer` can make modifications.
 First, modifications to the parameter:
 
-.Modification to the parameter of _Consumer.accept_
+.Example {counter:example}, modification to the parameter of `Consumer.accept`
 [source,java]
 ----
 One<StringBuilder> one = new One<>();
@@ -627,10 +683,11 @@ one.visit(sb -> sb.append("!"));
 
 The last statement is maybe more easily seen as:
 
-.Modification to the parameter of _Consumer.accept_, written out
+.Example {counter:example}, modification to the parameter of `Consumer.accept`, written out
 [source,java]
 ----
 one.visit(new Consumer<StringBuilder> {
+
    @Override
    public void accept(StringBuilder sb) {
        sb.append("!");
@@ -640,13 +697,16 @@ one.visit(new Consumer<StringBuilder> {
 
 Second, modifications to the fields of the type:
 
-.The method _Consumer.accept_ modifying a field
+.Example {counter:example}, the method `Consumer.accept` modifying a field
 [source,java]
 ----
 @E1Container
 class ReceiveStrings implements Consumer<String> {
+
+    @Modified
     public final List<String> list = new ArrayList<>();
 
+    @Modified
     @Override
     public void accept(String string) {
         list.add(string);
